# Blackjack

./: AI player.cpp  AIplayer.cpp  Cards.cpp  Cards.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Game.cpp  Game.h  README.md  Suit.cpp  Suit.h  User.cpp  User.h  blackjack  main  main.cpp
Blackjack_UpdatedUI/: AIplayer.h  BJpngs.qrc  CMakeLists.txt  CMakeLists.txt.user.0b0483e  CMakeLists.txt.user.946b573  CMakeLists.txt.user.e3ce6ec  Cards.cpp  Cards.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  User.cpp  User.h  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  shuffleSound  singleFlipSound  test.cpp  test.h
Blackjack_UpdatedUI/src/: Cards.cpp  Dealer.cpp  Dealer.h  Suit.h
Blackjack_UpdatedUI/tests/: BJLogicTest.h  CMakeLists.txt  dealerLogicTest.cpp  dealerLogicTest.h  mainForTesting.cpp  mainwindowTest.cpp  mainwindowTest.h  testMain.cpp  testMain.h  testsMain.cpp  userLogicTest.cpp  userLogicTest.h
Release/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  qtcsettings.cmake
Release/.cmake/api/v1/reply/: codemodel-v2-7a51db20320b61ff92a5.json  directory-.-Release-ee176969668761a6d3f1.json  index-2024-12-08T06-04-56-0349.json  index-2025-10-01T05-44-02-0128.json  target-Blackjack-Release-1c447bd3f0393f5d7cad.json  target-Blackjack-Release-cd5ad6a8b2253bd290c5.json  target-BlackjackTests-Release-4e866cd0d62dc754bb81.json  target-BlackjackTests-Release-d4ca0b359b93d7777819.json  target-BlackjackTests_autogen-Release-79f7fb540874b24599b1.json  target-Continuous-Release-b342f57b6284a301b0c3.json  target-ContinuousCoverage-Release-ae95aa7fc64247fc9efd.json  target-ContinuousCoverage-Release-bce6049be404b4a57ceb.json  target-ContinuousStart-Release-12625f68b78709ead548.json  target-ContinuousSubmit-Release-fda73e7fe765385625bd.json  target-ContinuousTest-Release-087708cec3a3d6acdbd2.json  target-ContinuousUpdate-Release-84b796b295efe9981f2a.json  target-ContinuousUpdate-Release-d1d335634b6c6baf0fd4.json  target-ExperimentalBuild-Release-97d76317b07f7fa1ca96.json  target-ExperimentalBuild-Release-f90e4f1e8117249218d3.json  target-ExperimentalConfigure-Release-96539e576b39f6874fc2.json  target-ExperimentalCoverage-Release-772140402d1d9cdaaed5.json  target-ExperimentalCoverage-Release-e4eed918f43d17fdb4b7.json  target-ExperimentalMemCheck-Release-11e01b69b69164e333b0.json  target-ExperimentalStart-Release-a35a5f9a1ce091b0942f.json  target-ExperimentalSubmit-Release-1d9991cbd1e60068d1b8.json  target-ExperimentalTest-Release-1fd22025076d22b36026.json  target-Nightly-Release-012bd4db00b757be0146.json  target-Nightly-Release-0bb3d3c48e51199a95e4.json  target-NightlyBuild-Release-67645c96959a1bd7838a.json  target-NightlyConfigure-Release-896f5bcc9876613b2b9a.json  target-NightlyCoverage-Release-118c81c1479492dd3b4f.json  target-NightlyMemCheck-Release-08cb58c7697ad164012e.json  target-NightlyMemCheck-Release-6108051da0eb652430f0.json  target-NightlyStart-Release-47f75d5556decd153276.json  target-NightlySubmit-Release-487610fd3dc1453c5c66.json  target-NightlySubmit-Release-9663ba2aa7bbed7318b9.json  target-NightlyTest-Release-8d8b3431d3780692f9ad.json  target-NightlyUpdate-Release-a87de33f89829a4b28bd.json
Release/.cmake/api/v1/reply.prev/: cmakeFiles-v1-8f860d71fb63b79cf3e2.json  index-2025-10-01T05-40-57-0275.json  target-Blackjack-Release-7459d2e053db7dae1042.json  target-Continuous-Release-e3a48468dad99558cf84.json  target-ContinuousBuild-Release-358b02e952852191ae6f.json  target-ContinuousConfigure-Release-ea34ad800dae8a241618.json  target-ContinuousCoverage-Release-791f8d9bc34a1876473e.json  target-ContinuousMemCheck-Release-ccb42a355455a26beffa.json  target-ContinuousSubmit-Release-c3f580af45a2c8663d50.json  target-ExperimentalBuild-Release-309199dbc65976112163.json  target-ExperimentalCoverage-Release-4cada28f730ceac013e6.json  target-ExperimentalMemCheck-Release-8fa8b9416bc661ba0efe.json  target-ExperimentalTest-Release-3d513c1616fc0ef7cbbf.json  target-NightlyConfigure-Release-8bf764159b1bbd6f3857.json  target-NightlyCoverage-Release-1811ba02ab955848df07.json  target-NightlyMemoryCheck-Release-9e764b90c34bf72dbf51.json  target-NightlyTest-Release-325290e4a771fa85ba21.json
Release/.qt/: QtDeploySupport.cmake
Release/.qtc_clangd/: compile_commands.json
Release/.qtc_clangd/.cache/clangd/index/: Cards.h.9E77FDF6DCFEA901.idx  Dealer.h.4185B4E05790EEF4.idx  QGraphicsPixmapItem.83AB3011387D0731.idx  QIODevice.112D45A89E4118BC.idx  QNetworkCookie.8514301F6712EE19.idx  QNetworkRequest.EFC3FC68FBC5A3D4.idx  QObject.3AA6E3D682DEFE3F.idx  QSharedDataPointer.B3D0A7A9C8D38156.idx  QSoundEffect.E119A7081F2F7EBE.idx  QSslError.09C8AD89D1C0866A.idx  QtMultimediaDepends.107662621AD98EED.idx  QtTest.C64016B5D587005B.idx  Suit.cpp.63BE6C683ADEBC53.idx  Suit.h.98D3F8AA1FA68D82.idx  User.cpp.069B59E9B58990CE.idx  User.h.94827BA1D72A6036.idx  dealerLogicTest.cpp.69E63878884BD099.idx  gl.h.CE9F3C88C5FA1DB3.idx  iosfwd.E3599E7C62DB21CE.idx  main.cpp.71B14DD7B3DF9581.idx  mainwindow.h.465AB51E677717F9.idx  q20algorithm.h.114820DAFC2D0C38.idx  (+141 more)
Release/Blackjack_autogen/: deps  mocs_compilation.cpp
Release/Blackjack_autogen/EWIEGA46WW/: moc_Dealer.cpp  moc_Dealer.cpp.d  moc_User.cpp
Release/tests/: CTestTestfile.cmake
Release/tests/BlackjackTests_autogen/: deps
Release/tests/BlackjackTests_autogen/EWIEGA46WW/: moc_dealerLogicTest.cpp  moc_dealerLogicTest.cpp.d
Release/tests/BlackjackTests_autogen/YCDLW3T4OG/: moc_Dealer.cpp  moc_User.cpp  moc_mainwindow.cpp
Release/tests/BlackjackTests_autogen/include/: ui_mainwindow.h
blackjack UI/Blackjack/: CMakeLists.txt  Dealer.cpp  Dealer.h  User.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
blackjack UI/Blackjack/src/: Game.h  User.cpp
blackjack_game/cppFiles/: AI player.cpp  Cards.cpp  Dealer.cpp  Deck.cpp  Game.cpp  Suit.cpp  User.cpp  main.cpp
blackjack_game/hFiles/: AI player.h  Cards.h  Dealer.h  User.h
main.dSYM/Contents/Resources/DWARF/: main
(+1 files in other folders)
